src/index.css
@import "tailwindcss";

@theme {
  --color-bg-light: oklch(92% 0.12 270);
  --color-bg-dark: oklch(6% 0.13 270);

  --color-surface-light: oklch(96% 0.08 270);
  --color-surface-dark: oklch(12% 0.15 270);

  --color-text-light: oklch(6% 0 0);
  --color-text-dark: oklch(96% 0 0);

  --color-primary: oklch(60% 0.40 266);
  --color-primary-dark: oklch(32% 0.43 270);

  --color-button: oklch(45% 0.08 266);
  --color-button-hover: oklch(40% 0.10 266);
  --color-button-dark: oklch(20% 0.13 270);
  --color-button-hover-dark: oklch(16% 0.15 270);

  --color-submit-button: oklch(60% 0.25 266);
  --color-submit-button-hover: oklch(55% 0.27 266);
  --color-submit-button-dark: oklch(24% 0.41 270);
  --color-submit-button-hover-dark: oklch(28% 0.47 270);

  --color-input-bar: oklch(94% 0.20 270);
  --color-input-bar-dark: oklch(10% 0.13 270);

  --color-input-text: oklch(15% 0 0);
  --color-input-text-dark: oklch(92% 0 0);

  --color-link: oklch(60% 0.40 266);
  --color-link-dark: oklch(32% 0.39 270);
}

@custom-variant dark (&:is(.dark, .dark *));

